[tool.poetry]
name = "markdown-gds"
version = "0.1.0"
description = "A Python markdown extension for GDS"
authors = ["Sam Dudley <samuel.dudley@digital.trade.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
